--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build:
-    name: '${{ matrix.os }} shared=${{ matrix.shared }} ${{ matrix.build_type }}'
+    name: ${{ matrix.os }} shared=${{ matrix.shared }} ${{ matrix.build_type }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -49,7 +49,7 @@ jobs:
         uses: ForAllSecure/mcode-action@v1
         with:
           mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
-          args: --image ${{ steps.meta.outputs.tags }} 
+          args: --image ${{ steps.meta.outputs.tags }} --duration 300
           sarif-output: sarif
 
       - name: Upload SARIF file(s)
